--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <span class="speed-value">0</span>
     <span class="units">KM/H</span>
   </h1>
+   </h1>
+  <h1 class="coordinates">
+  <span class="longitude"></span>
+  <span class="units">deg</span>
+</h1>
+
+<h1 class="coordinates">
+  <span class="latitude"></span>
+  <span class="units">deg</span>
+</h1>
 
   
   <script src="script.js"></script>
