--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
    </h1>
   <h1 class="coordinates">
   <span class="longitude"></span>
-  <span class="units">deg</span>
+  <span class="units">   ° longitude</span>
 </h1>
 
 <h1 class="coordinates">
   <span class="latitude"></span>
-  <span class="units">deg</span>
+  <span class="units">  ° latitude</span>
 </h1>
 
   
